# sqlalchemy_multi_tenant

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 05d7aa508e75_create_tenant_table.py  164eea7df201_add_missing.py  17f01639bf2b_user_email_tenant_mapper.py  2d3a37e9fefd_create_current_tables_in_tenant_default.py  2f372e99f219_create_user_table.py  6586f321c28e_create_shared_schema.py  699eaaf679d2_added_time_expires_to_user.py  ac0748dcfdd4_create_tenant_default_schema.py  bff9d3c48506_added_password_column.py  c04a24d88722_add_item_table.py
requests/auth/: login.http
src/sqlalchemy_multi_tenant/: config.py  main.py
src/sqlalchemy_multi_tenant/api/: dependencies.py  routers.py
src/sqlalchemy_multi_tenant/api/endpoints/: items.py  login.py  user.py
src/sqlalchemy_multi_tenant/auth/: __init__.py  exceptions.py  models.py  token.py
src/sqlalchemy_multi_tenant/core/: bootstrap.py  models.py
src/sqlalchemy_multi_tenant/core/db/: __init__.py  migrations.py  session.py
src/sqlalchemy_multi_tenant/core/orm/: __init__.py  mapper.py  registry.py
src/sqlalchemy_multi_tenant/crud/: base.py
src/sqlalchemy_multi_tenant/items/: adapters.py  crud_items.py  models.py  orm.py
src/sqlalchemy_multi_tenant/tenant/: crud_tenant.py  models.py  orm.py  tenant.py
src/sqlalchemy_multi_tenant/users/: adapters.py  crud_user.py  init_db.py  models.py  orm.py
tests/: conftest.py  test_items.py  test_login.py  test_settings.py  test_user.py
tests/fixtures/: fixtures_multi_tenant.py
