[tool.poetry]
name = "sqlalchemy_multi_tenant"
version = "0.1.0"
description = ""
authors = ["Wilson Santos <wilson.santos.dev87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.45"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
alembic = "^1.9.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pydantic = {extras = ["email", "dotenv"], version = "^1.10.2"}
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
isort = "^5.11.2"
black = "^22.12.0"
pylint = "^2.15.8"
pytest = "^7.2.0"
httpx = "^0.23.1"
pytest-watch = "^4.2.0"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.pylint]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'missing-class-docstring',
    'missing-function-docstring',
    'too-few-public-methods'
 ]

[tool.poetry.scripts]
init_db = "sqlalchemy_multi_tenant.users.init_db:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
